apps/notary/ingresses/notary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notary-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
  - host: notary-server.iam-demo.test
    http:
      paths:
      - backend:
          service:
            name: notary-server
            port:
              number: 4443
        path: /
        pathType: Prefix
  - host: notary-signer.iam-demo.test
    http:
      paths:
      - backend:
          service:
            name: notary-signer
            port:
              number: 7899
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - notary
    - notary.iam-demo.test
    - notary-server
    - notary-server.iam-demo.test
    secretName: notary-server-tls-secret
  - hosts:
    - notary-signer
    - notary-signer.iam-demo.test
    secretName: notary-signer-tls-secret
